--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body, html {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url(Imgens/fundo.png);
+    background-image: url(Imgens/fundo2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: #ddd;
